# raft

./: Cargo.toml
date-format/: Cargo.toml
date-format/src/: format.rs  lib.rs  model.rs  model_parse.rs
discovery/: Cargo.toml
discovery/src/: ip_range.rs  lib.rs  msg.rs  sockaddr_range.rs  udp.rs
discovery/src/addr_range/: ip_range.rs  mod.rs  parse.rs  sockaddr_range.rs
discovery/src/udp/: mod.rs  udp_client.rs  udp_service.rs
log-http-client/: Cargo.toml
log-http-client/src/: client.rs  client_awc.rs  client_reqwest.rs  domain.rs  lib.rs
log-http-service/: .gitignore  Cargo.toml  dloghw-second.json  queue_api.http  queue_api.md  raft_api.md  run_second.sh
log-http-service/.temp/: data
log-http-service/app_data/: .gitignore
log-http-service/app_data/queue/: 2023-07-21T18-29-39-a9p29.binlog  2023-07-26T03-06-37-qadnb.binlog  2023-07-26T04-11-14-ljeuw.binlog
log-http-service/src/: main.rs  queue_api.rs  state.rs  static_api.rs
log-http-service/src/config/: app.rs  cmd_line.rs  config.rs  mod.rs  queue.rs  raft.rs  web.rs
log-http-service/src/queue_api/: err_api.rs  headers_api.rs  info_api.rs  log_switch_api.rs  mod.rs  rec_id.rs  ver_api.rs
log-http-service/src/queue_api/plain_api/: insert_api.rs  mod.rs  read_api.rs
log-http-service/src/queue_api/raw_api/: mod.rs  read_api.rs  write_api.rs
log-http-service/src/raft/: api_spec.rs  bg_tasks.rs  domain.rs  election.rs  election_1.rs  election_2.rs  mod.rs  raft_err.rs  raft_state.rs  rand_duration.rs  rest_api.rs
log-http-service/src/raft/registry/: mod.rs
log-http-service/src/raft/rest_api/: mod.rs
log-http-service/src/static/: index.html  labels.css  layout.css  queue.js  swagger.yml  ui.js
logs/: Cargo.toml  readme.md
logs-tools/: Cargo.toml  build.rs
logs-tools/src/: append.rs  buildinfo.rs  bytesize.rs  err.rs  extract.rs  help.md  main.rs  parse.rs  range.rs  substr.rs  tag.rs
logs-tools/src/actions/: append.rs  extract.rs  mod.rs  tag.rs  viewheaders.rs
logs-tools/src/parse/: digit.rs  keyword.rs  lookup.rs  mod.rs  number.rs  parse.rs  ws.rs
logs-tools/src/range/: ast2range.rs  mod.rs  range.rs  range_parser.rs
logs/src/: lib.rs  perf.rs
logs/src/bbuff/: absbuff.rs  mod.rs  streambuff.rs
logs/src/fs/: dir_iter.rs  mod.rs
logs/src/log/: block.rs  logfile.rs  mod.rs
logs/src/log/block/: block.rs  blockopts.rs  fileoffset.rs  head.rs  mod.rs  tail.rs
logs/src/logfile/: logfile.rs  mod.rs
logs/src/logfile/block/: block.rs  blockid.rs  blockopts.rs  dataid.rs  err.rs  fileoffset.rs  head.rs  limit.rs  mod.rs  string_n.rs  tail.rs
logs/src/logqueue/: err.rs  find_logs.rs  fs_log_queue.rs  fs_logs.rs  log_api.rs  log_id.rs  log_queue.rs  log_queue_impl.rs  log_queue_impl2.rs  log_queue_read.rs  log_queue_wrap.rs  log_queue_write.rs  log_seq_verifier.rs  log_switch.rs  logs_open.rs  mod.rs  new_file.rs  path_tmpl.rs
logs/src/logs/: dir_iter.rs  fs_logs.rs  log_api.rs  mod.rs
logs/src/perf/: mod.rs  perf.rs  tracks.rs
lookup/: Cargo.toml
lookup/src/: dns_lookup.rs  lib.rs  udp_lookup.rs
parse/: Cargo.toml
parse/src/: alternative_combo.rs  and_then_combo.rs  duration.rs  follow_combo.rs  keyword.rs  lib.rs  lookup.rs  map_combo.rs  number.rs  parse.rs  repeat_combo.rs  substr.rs  template.rs  wildcard.rs  ws.rs
path_template/: Cargo.toml
path_template/src/: lib.rs
range/: Cargo.toml
range/src/: ast2range.rs  cartesian_prod.rs  lib.rs  range.rs
