[package]
name = "discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-client = "0.22.0"
resolv-conf = "0.7.0"
tokio = { version="1.30.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.19"
env_logger = "0.10.0"
derive_more = "0.99.17"
uuid = "1.4.1"
