[package]
name = "log-http-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
actix-rt = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.72"
futures = "0.3.28"
logs = { path="../logs" }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "multipart", "stream", "socks", "blocking"] }