[package]
name = "log-http-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-static-files = "4.0"
static-files = "0.2.1"
mime = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parse = { path="../parse" }
path_template = { path="../path_template" }