[package]
name = "logs-tools"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logs = { path = "../logs" }
sha2 = "0.10.6"
hex = "0.4.3"
regex = "1.8.1"
#lazy_static = "1.4.0"
lazy-regex = "2.5.0"
chrono = "0.4.0"
either = "1.8.1"