[package]
name = "logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
random-access-disk = "0.8.0"
aquamarine = "0.3.1"
sha2 = "0.10.6"
parse = { path="../parse" }
chrono = "0.4.26"
date-format = { path="../date-format" }
rand = "0.8.5"
once_cell = "1.18.0"

[dependencies.uuid]
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    # "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]